--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Catch a pokemon",
+  "name": "A funny way to use PokeApi",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "pikachuicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
