--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "Catch a pokemon",
-  "name": "A funny way to use PokeApi",
+  "short_name": "Catch a Pokemon",
+  "name": "Funny way to use PokeApi",
   "icons": [
     {
-      "src": "pikachuicon.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "pikachuicon.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "pikachuicon.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
