--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Catch a Pokemon",
-  "name": "Funny way to use PokeApi",
+  "name": "Catch a Pokemon - A funny way to use PokeApi",
   "icons": [
     {
       "src": "favicon.ico",
